rsponsive issue fixes

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div style="padding-left: 20%;padding-right: 20%;">
+        <div class="main-container">
             <div class="header-container">
                 <div>
                     <img style="height: 5rem;" src="./images/FlipFusionLogo.png" alt="Error">
